@@ -1,5 +1,10 @@
 2007-08-30  Jürg Billeter  <j@bitron.ch>
 
+	* gee/hashmap.vala, gee/hashset.vala: replace reference-type structs
+	  by classes
+
+2007-08-30  Jürg Billeter  <j@bitron.ch>
+
 	* gee/arraylist.vala, gee/hashmap.vala, gee/hashset.vala,
 	  gee/iterable.vala, gee/iterator.vala, gee/list.vala, gee/map.vala,
 	  gee/readonlycollection.vala, gee/readonlylist.vala,
